--- a/app/src/main/res/layout/fragment_select_year.xml
+++ b/app/src/main/res/layout/fragment_select_year.xml
@@ -21,11 +21,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView"
+                android:text="@string/popMovies"
                 tools:text="@string/popMovies" />
 
             <EditText
-                android:id="@+id/editTextNumber"
+                android:id="@+id/etYear"
                 android:layout_width="95dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -34,7 +34,7 @@
                 android:inputType="number" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnSubmit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -42,6 +42,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvMovies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
