--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -13,8 +13,9 @@
 
         <ImageView
             android:id="@+id/ivBackDrop"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:scaleType="fitCenter"
             tools:src="@tools:sample/backgrounds/scenic" />
 
         <LinearLayout
@@ -32,7 +33,8 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="240dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
                 android:orientation="vertical">
 
                 <TextView
@@ -43,6 +45,7 @@
                     android:layout_weight="1"
                     android:fontFamily="serif"
                     android:text="TITLE VAN FILM"
+                    android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
@@ -58,6 +61,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="16dp"
+                    android:layout_marginTop="32dp"
                     android:layout_weight="1"
                     android:orientation="horizontal">
 
@@ -86,6 +90,7 @@
             android:id="@+id/tvOverView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:text="@string/overview"
@@ -95,6 +100,7 @@
             android:id="@+id/tvRecievedOverview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
             android:text="TextView"
             android:textSize="12sp" />
