updated text alignment

--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -45,7 +45,7 @@
                     android:layout_weight="1"
                     android:fontFamily="serif"
                     android:text="TITLE VAN FILM"
-                    android:textAlignment="center"
+                    android:textAlignment="viewStart"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
